Portfolio Homepage ready

--- a/index.html
+++ b/index.html
@@ -1,33 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="https://img.icons8.com/external-soft-fill-juicy-fish/60/000000/external-male-coding-and-development-soft-fill-soft-fill-juicy-fish.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Prajjwal Mathur⚡</title>
+    <style>
+        .content .heading {
+            font-size: 30px;
+            color: #ddd;
+        }
+    </style>
 </head>
-<body>
-    <header>
-        <nav class="navbar">
-            <a href="#" class="toggle-button">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </a>
-            <div class="navbar-links">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Toolkit</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
+<body>
+    <div class="banner-area">
+        <div class="content-area">
+            <div class="content">
+
+                <header>
+                    <div class="hamburger" id="hamburger-0">
+                        <span class="line"></span>
+                        <span class="line"></span>
+                        <span class="line"></span>
+                    </div>
+                    <nav class="navbar">
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="https://github.com/SlowFlash22#-----about-me-----">About</a></li>
+                            <li><a href="https://github.com/SlowFlash22?tab=repositories">Projects</a></li>
+                            <li><a href="https://github.com/SlowFlash22#languages-known">Toolkit</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </nav>
+                </header>
+
+
+                <div class="heading">
+                    <div class="left">
+                        <div class="resume">
+                            <a href="https://www.linkedin.com/in/slowflash/"><img src="https://img.icons8.com/external-xnimrodx-lineal-color-xnimrodx/64/000000/external-resume-freelancer-xnimrodx-lineal-color-xnimrodx.png"/></a>
+                        </div>
+                        <h2> Hey there👋, I'm Prajjwal Mathur</h2>
+
+                        <p><i> DSA Enthusiast | Open-Source Contributor</i></p>
+
+                        <div class="ibutton">
+                            <button class="biolink" onclick="location.href='https://bio.link/slowflash'" type="button">Let's Connect!</button>
+                        </div>
+                    </div>
+                    <div class="profilepic">
+                        <img src="https://avatars.githubusercontent.com/u/64896645?v=4">
+                    </div>
+                </div>
+                <h4>This portfolio is still under-construction, building it as I learn more</h4>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
